src/objects/SFDC_Assignment__c.object
<CustomObject>
    <description>Assignments associate Resources to Projects.</description>
    <fields>
        <fullName>Cap_on_hours__c</fullName>
        <label>Cap on hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Light__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Green Light</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipName>R00N60000001VqprEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>SFDC_Resource__c</referenceTo>
        <relationshipName>R00N60000001VqpwEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Senior Project Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>AllAssignments</fullName>
        <columns>Projects__c</columns>
        <columns>Resource__c</columns>
        <columns>Role__c</columns>
        <columns>Green_Light__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assignments</label>
    </listViews>
    <nameField>
        <displayFormat>Assignment {000}</displayFormat>
        <label>Assignments</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>